--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   }
   
 body {
-    background-image: url(https://cdn.discordapp.com/attachments/938080622046482484/1243569050236223548/Lunarille_Website_bg.png?ex=6651f36d&is=6650a1ed&hm=c41ce4f3565f4a6753c93f0cde0eed5d219999e701f5a3d953f14dbb5708e990&);
+    background-image: url("Images/Lunarille Website bg.png");
     font-family: 'Bebas Neue', sans-serif;
     text-align: center;
     
